define roles api and unit tests

--- a/src/KnowledgeSpace.BackendServer/appsettings.json
+++ b/src/KnowledgeSpace.BackendServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-R6DEQQ4;Database=KnowledgeSpaceDb;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
