--- a/src/KnowledgeSpace.BackendServer/appsettings.json
+++ b/src/KnowledgeSpace.BackendServer/appsettings.json
@@ -8,5 +8,14 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-R6DEQQ4;Database=KnowledgeSpaceDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Warning"
+      }
+    }
   }
 }
