--- a/src/KnowledgeSpace.BackendServer/appsettings.Production.json
+++ b/src/KnowledgeSpace.BackendServer/appsettings.Production.json
@@ -5,17 +5,27 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-R6DEQQ4;Database=KnowledgeSpaceDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information"
+    },
     "WriteTo": [
       {
         "Name": "Async",
         "Args": {
           "configure": [
             {
-              "Name": "Console"
+              "Name": "File",
+              "Args": {
+                "path": "path/to/log.txt",
+                "rollingInterval": "Day",
+                "retainedFileCountLimit": 7,
+                "buffered":  true
+              }
             }
           ]
         }
